# python-base

./: .dockerignore  Dockerfile  LICENSE  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
