[tool.poetry]
name = "python-base"
version = "0.1.0"
description = ""
authors = ["Tom Scholz <tomscholz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_base"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
